tests/rosetta/transpiler/Scala/functional-coverage-tree.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/functional-coverage-tree.scala:105: error: value toInt is not a member of Any
        v1 = (v1 + toFloat(BigInt((m("weight")).toInt)) * c).toString.toDouble
                                                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/functional-coverage-tree.scala:106: error: value toInt is not a member of Any
        v2 = v2 + BigInt((m("weight")).toInt)
                                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/functional-coverage-tree.scala:119: error: value toInt is not a member of Any
      line = line + padLeft(String.valueOf(BigInt((n("weight")).toInt)), BigInt(3)) + "   | "
                                                                ^
three errors found
